<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NB Development</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="feedbackemail">Your Email</string>
    <string name="feedbackname">Your Name</string>
    <string name="feedbackbody">Feedback Details...</string>
    <string name="feedbacktitle">Please give us your Feedback:</string>
    <string name="feedbackresponse">Would you like an email response</string>
    <string name="feedbackbutton">Send Feedback</string>
    <string name="action_settings">Settings</string>
    
     <string name="feedbacktype1">Praise</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">Suggestion</string>
    <string name="feedbacktype4">Bug</string>

</resources>
